feat: implementacion de registro de usuarios, modificacion, eliminacion.